--- a/race-service/src/main/resources/application.properties
+++ b/race-service/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3307/racedb?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=abc123
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+server.port=8080
