docker compose en actions

--- a/race-service/src/main/resources/application.properties
+++ b/race-service/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-
-spring.datasource.url=jdbc:mysql://localhost:3308/racedb?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://${MYSQL_DB_HOST:localhost}:${MYSQL_DB_PORT:3308}/racedb?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=abc123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+eventservice.baseurl= ${EVENT_SERVICE_BASEURL:localhost:8082}
+swimmerservice.baseurl= ${SWIMMER_SERVICE_BASEURL:localhost:8081}
 
 server.port=8080
