--- a/event-service/src/main/resources/application.properties
+++ b/event-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3307/eventdb?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://${MYSQL_DB_HOST:localhost}:${MYSQL_DB_PORT:3307}/eventdb?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=abc123
 spring.jpa.hibernate.ddl-auto=update
