--- a/swimmer-service/src/main/resources/application.properties
+++ b/swimmer-service/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/swimmer-service
+spring.data.mongodb.uri=mongodb://${MONGODB_HOST:localhost}:${MONGODB_PORT:27017}/swimmer-service
 
 server.port=8081
