--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -10,6 +10,21 @@ logging:
         org.springframework.security: TRACE
 
 spring:
+    security:
+      oauth2:
+        client:
+          registration:
+            google:
+              client-id: ${GOOGLE_CLIENTID}
+              client-secret: ${GOOGLE_CLIENTSECRET}
+              scope:
+                - openid
+                - profile
+                - email
+        resourceserver:
+          jwt:
+            issuer-uri: https://accounts.google.com
+            jwk-set-uri: https://www.googleapis.com/oauth2/v3/certs
     cloud:
       gateway:
         routes:
@@ -43,3 +58,4 @@ spring:
                 - Method=GET
               filters:
                 - SetPath=/api/swimmer/all
+
