--- a/.github/workflows/main-flow.yml
+++ b/.github/workflows/main-flow.yml
@@ -98,7 +98,7 @@ jobs:
 
       - name: Build, test and package project
         working-directory: ./api-gateway
-        run: mvn package -DskipTests
+        run: mvn package -B -DskipTests
 
       - name: Docker login
         run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }}
