integration met frontend

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -6,7 +6,7 @@ logging:
         root: INFO
         org.springframework.cloud.gateway: INFO
         org.springframework.cloud.gateway.route.RouteDefinitionRoutLocator: INFO
-        reactor.netty: INFO
+        reactor.netty: TRACE
         org.springframework.security: TRACE
 
 spring:
@@ -54,8 +54,15 @@ spring:
             - id: swimmer-service-all
               uri: http://${SWIMMER_SERVICE_BASEURL:localhost:8081}
               predicates:
-                - Path=/swimmers
+                - Path=/swimmers/all
                 - Method=GET
               filters:
                 - SetPath=/api/swimmer/all
 
+            - id: swimmer-service
+              uri: http://${SWIMMER_SERVICE_BASEURL:localhost:8081}
+              predicates:
+                - Path=/swimmers
+                - Method=GET
+              filters:
+                - SetPath=/api/swimmer
